--- a/kawabys/rollman-tabun-WA/rollman.cpp.org
+++ b/kawabys/rollman-tabun-WA/rollman.cpp.org
@@ -3,25 +3,25 @@ using namespace std;
 
 typedef long long ll;
 
-ll sum(const ll n, const ll a, const ll d){
+ll sum(const int n, const int a, const int d){
     return (2*a + (n-1)*d)*n/2;
 }
 
 int main(void){
     ios::sync_with_stdio(false);
     cin.tie(0);
-    ll N, X;
+    int N, X;
     ll L;
     cin >> N >> X >> L;
-    vector<ll> a(N+5, 0), d(N+5, 0);
-    for(ll i = 0; i < N; i++) cin >> a[i] >> d[i];
+    vector<int> a(N+5, 0), d(N+5, 0);
+    for(int i = 0; i < N; i++) cin >> a[i] >> d[i];
 
 
     if(X >= L){
         ll ans = 0;
-        for(ll i = 0; i < N; i++){
-            ll _a = a[i] + (X-1)*d[i];
-            ll _d = -d[i];
+        for(int i = 0; i < N; i++){
+            int _a = a[i] + (X-1)*d[i];
+            int _d = -d[i];
             ans = max(ans, sum(L, _a, _d) );
         }
         cout << ans << endl;
@@ -31,14 +31,10 @@ int main(void){
     ll bundle = L/X;
     ll bundle_rest = L%X;
     ll bundle_sum = 0;
-    if(bundle_rest == 0){
-      bundle--;
-      bundle_rest = X;
-    }
 
 
     // Init
-    for(ll i = 0; i < bundle; i++){
+    for(int i = 0; i < bundle; i++){
         bundle_sum += sum(X, a[i], d[i]);
     }
 
@@ -51,43 +47,34 @@ int main(void){
     //cout << "B" << endl;
 
     // Between
-    for(ll removing = 0; removing < N - bundle; removing++){
+    for(int removing = 0; removing < N - bundle; removing++){
         ll local_ans = 0;
-        ll adding = removing + bundle;
+        int adding = removing + bundle;
         bundle_sum -= sum(X, a.at(removing), d.at(removing));
         bundle_sum += sum(X, a.at(adding),   d.at(adding)  );
 
         ll left_a  = a.at(removing), left_d  = d.at(removing);
+        left_a = left_a + (X-1)*left_d;
+        left_d = -left_d;
 
         if( removing != N - bundle - 1){
             ll right_a = a.at(adding+1), right_d = d.at(adding+1);
 
-            // l: the number of terms used by right-side sequence.
-            ll l = 0, r = bundle_rest;
+            int l = 0, r = X;
             while(l+1 < r){
-              ll mid = (l+r)/2;
-              ll b_mid = right_a + mid * right_d;
-              ll a_mid = left_a + (X - bundle_rest + mid) * left_d;
-              //cout << a_mid << " " << b_mid << endl;
-              if( b_mid - a_mid + (left_a - right_a) >= 0 ){
-                l = mid;
-              }else{
-                r = mid;
-              }
+                int mid = (l+r)/2;
+                int mid_member = left_a + (mid-1)*left_d;
+                if(mid_member < right_a){
+                    r = mid;
+                }else{
+                    l = mid;
+                }
             }
-            // l: the beginning of taking sum.
-            ll left_begin = left_a + left_d*(X - bundle_rest + l + 1);
-            //cout << "left_begin=" << left_begin << endl;
-            ll left_num = bundle_rest - l - 1;
-            ans = max(ans, bundle_sum + sum(left_num, left_begin, left_d) + sum(l+1, right_a, right_d));
-
-            left_a = left_a + (X-1)*left_d;
-            left_d = -left_d;
-            ans = max(ans, bundle_sum + sum(bundle_rest, left_a, left_d));
+            int left_range = l;
+            int right_range = bundle_rest - l;
+            ans = max(ans, bundle_sum + sum(left_range, left_a, left_d) + sum(right_range, right_a, right_d));
         }else{
-          left_a = left_a + (X-1)*left_d;
-          left_d = -left_d;
-          ans = max(ans, bundle_sum + sum(bundle_rest, left_a, left_d));
+            ans = max(ans, bundle_sum + sum(bundle_rest, left_a, left_d));
         }
     }
 
